# simple-server-framework

./: .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
docs/: 404.html  index.html  requirements.txt
ssf/: README.md  app_venv.py  application.py  build.py  cli.py  config.py  default_authentication.py  deploy.py  deploy_gcore.py  deploy_paperspace.py  docker.py  dockerfile.template  fastapi.template  fastapi_types.py  generate_endpoints.py  generate_endpoints_fastapi.py  init.py  load_config.py  logger.py  package.py  publish.py  pyproject.toml  repo.py  requirements.txt  results.py  run.py  sdk_utils.py  ssh.py  template.py  test.py  utils.py  version.py
ssf/application_interface/: README.md  application.py  config.py  logger.py  results.py  runtime_settings.py  utils.py  worker.py
ssf/common_runtime/: README.md  callbacks.py  common.py  config.py  dispatcher.py  metrics.py
ssf/fastapi_runtime/: README.md  common.py  config.py  dispatcher.py  fastapi.template  fastapi_generate_endpoints.py  fastapi_types.py  server.py  server_authentication.py  server_health.py  server_metrics.py  server_security.py  ssf_run.py
ssf/grpc_runtime/: README.md  grpc_common.py  grpc_metrics.py  grpc_predict_v2_pb2.py  grpc_predict_v2_pb2.pyi  grpc_predict_v2_pb2_grpc.py  grpc_servicer.py  grpc_types.py  server.py  ssf_run.py  test_utils_grpc.py
tests/: README.md  conftest.py  import_sdk_packages.py  model.py  pytest.ini  report_summary.py  requirements.txt  test_app_builder.py  test_bash_cli.py  test_cors.py  test_cwd.py  test_errors.py  (+17 more)
(+119 files in other folders)
