[project]
name ="ssf"
version = "1.0.0"
description = "Simple Server Framework"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.urls]
Repository = "https://github.com/graphcore/simple-server-framework.git"

