[project]
name ="ssf"
version = "1.2.0"
description = "Simple Server Framework"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = [
  "argparse==1.4.0",
  "packaging==23.1",
  "pyyaml==6.0.1",
  "fastapi==0.99.1",
  "uvicorn==0.22.0",
  "prometheus_fastapi_instrumentator==6.0.0",
  "prometheus-client==0.9.0",
  "python-multipart==0.0.7",
  "typing-extensions==4.6.2",
  "requests==2.31.0",
  "wheel==0.38.1",
  "grpcio==1.54.0",
  "grpcio-tools==1.54.0",
  "grpcio-reflection==1.54.0"
]

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project.urls]
Repository = "https://github.com/graphcore/simple-server-framework.git"

[project.scripts]
gc-ssf = "ssf.cli:cli"
